--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.23.0",
     "@tailwindcss/vite": "^4.0.6",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
