--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.23.0",
     "@tailwindcss/vite": "^4.0.6",
     "dotenv": "^16.4.7",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3",
